fix(cxl-ui): cxl-marketing-nav menu bar button alignment
https://app.clickup.com/t/86b2hv84w

--- a/packages/cxl-ui/scss/cxl-marketing-nav.scss
+++ b/packages/cxl-ui/scss/cxl-marketing-nav.scss
@@ -33,9 +33,19 @@
       .container {
         justify-content: space-between;
 
+        .cxl-logo{
+          margin-left: 0;
+          padding-left: 0;
+        }
+
         .search-button {
           width: 140px;
           color: var(--lumo-shade);
+        }
+
+        vaadin-menu-bar::part(overflow-button) {
+          margin-right: 0;
+          padding-right: 0;
         }
       }
     }
